--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,9 +7,9 @@ if(doctest_FOUND)
 endif()
 
 
-# add_executable(trim_test_ src/trim_test.cpp)
-# target_link_libraries(trim_test_ dsllib  doctest::doctest)
-# add_test(trim_test trim_test_)
+add_executable(trim_test_ src/trim_test.cpp)
+target_link_libraries(trim_test_ dsllib  doctest::doctest)
+add_test(trim_test trim_test_)
 
 add_executable(interpreter_test_1_ src/interpreter_test_1.cpp)
 target_link_libraries(interpreter_test_1_  dsllib  doctest::doctest)
